<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/init_color"
    tools:context=".ChoiceActivity">

    <ImageView
    android:id="@+id/main_icon"
    android:layout_width="150dp"
    android:layout_height="150dp"
    android:contentDescription="@string/main_icon"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.19999999"
    app:srcCompat="@drawable/main_icon" />

    <TextView
        android:id="@+id/main_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choice_name"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_icon"
        app:layout_constraintVertical_bias="0.110000014" />

    <TextView
        android:id="@+id/main_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choice_desc"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_name"
        app:layout_constraintVertical_bias="0.021" />

    <Button
        android:id="@+id/button_user"
        android:layout_width="220dp"
        android:layout_height="60dp"
        android:background="@drawable/btn_main"
        android:text="@string/choice_user"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_desc"
        app:layout_constraintVertical_bias="0.483" />

    <Button
        android:id="@+id/button_admin"
        android:layout_width="220dp"
        android:layout_height="60dp"
        android:text="@string/choice_admin"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:background="@drawable/btn_main"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_user"
        app:layout_constraintVertical_bias="0.19999999" />


</androidx.constraintlayout.widget.ConstraintLayout>