<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/init_color"
    tools:context=".UserRegistActivity">


    <TextView
        android:id="@+id/main_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_main_join"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.110000014" />

    <TextView
        android:id="@+id/main_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auth_desc"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_name"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="130dp"
        android:layout_height="130dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_desc"
        app:layout_constraintVertical_bias="0.19999999"
        app:srcCompat="@drawable/finger_icon" />

    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <Button
            android:id="@+id/button_next"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:background="@drawable/btn_sub"
            android:layout_marginRight="30dp"
            android:text="@string/next" />

        <Button
            android:id="@+id/button_back"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:background="@drawable/btn_sub"
            android:layout_marginLeft="30dp"
            android:text="@string/back_kor" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>