<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main"
    tools:context=".AdminMainActivity">

    <Button
        android:id="@+id/button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:background="@color/none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.01999998" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/main_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.02" />


    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/coin_section"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7" />

    <TextView
        android:id="@+id/coin_section"
        android:layout_width="300dp"
        android:layout_height="580dp"
        android:background="@drawable/background_main"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.76">

    </TextView>


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/admin_location"
        android:textColor="@color/black"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="@+id/scanner"
        app:layout_constraintEnd_toEndOf="@+id/scanner"
        app:layout_constraintStart_toStartOf="@+id/scanner"
        app:layout_constraintTop_toTopOf="@+id/scanner"
        app:layout_constraintVertical_bias="0.07999998" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:background="@drawable/camera"
        app:layout_constraintBottom_toBottomOf="@+id/scanner"
        app:layout_constraintEnd_toEndOf="@+id/scanner"
        app:layout_constraintStart_toStartOf="@+id/scanner"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.24000001" />

    <View
        android:id="@+id/scanner"
        android:layout_width="250dp"
        android:layout_height="400dp"
        app:layout_constraintBottom_toBottomOf="@+id/coin_section"
        app:layout_constraintEnd_toEndOf="@+id/coin_section"
        app:layout_constraintStart_toStartOf="@+id/coin_section"
        app:layout_constraintTop_toTopOf="@+id/coin_section"
        app:layout_constraintVertical_bias="0.105" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/qr_auth"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/scanner"
        app:layout_constraintEnd_toEndOf="@+id/scanner"
        app:layout_constraintStart_toStartOf="@+id/scanner"
        app:layout_constraintTop_toBottomOf="@+id/imageView9"
        app:layout_constraintVertical_bias="0.18" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/coin"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/scanner"
        app:layout_constraintEnd_toEndOf="@+id/scanner"
        app:layout_constraintStart_toStartOf="@+id/scanner"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/scanner"
        app:layout_constraintEnd_toEndOf="@+id/scanner"
        app:layout_constraintStart_toStartOf="@+id/scanner"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <View
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:background="@color/grey"
        app:layout_constraintBottom_toBottomOf="@+id/coin_section"
        app:layout_constraintEnd_toEndOf="@+id/coin_section"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/coin_section"
        app:layout_constraintTop_toBottomOf="@+id/scanner"
        app:layout_constraintVertical_bias="0.13" />

    <ImageView
        android:id="@+id/couponimg"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/coupon"
        app:layout_constraintBottom_toBottomOf="@+id/coin_section"
        app:layout_constraintEnd_toEndOf="@+id/coin_section"
        app:layout_constraintHorizontal_bias="0.257"
        app:layout_constraintStart_toStartOf="@+id/coin_section"
        app:layout_constraintTop_toTopOf="@+id/coin_section"
        app:layout_constraintVertical_bias="0.885" />

    <TextView
        android:id="@+id/coupon"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:text="@string/coupon_add"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textSize="18sp"
        android:gravity="bottom"
        app:layout_constraintBottom_toBottomOf="@+id/coin_section"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toTopOf="@+id/view2"
        app:layout_constraintVertical_bias="0.4"
        tools:ignore="RtlCompat" />

    <ImageView
        android:id="@+id/missionimg"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/mission"
        app:layout_constraintBottom_toBottomOf="@+id/coin_section"
        app:layout_constraintEnd_toEndOf="@+id/coin_section"
        app:layout_constraintHorizontal_bias="0.734"
        app:layout_constraintStart_toStartOf="@+id/coin_section"
        app:layout_constraintTop_toTopOf="@+id/coin_section"
        app:layout_constraintVertical_bias="0.885" />

    <TextView
        android:id="@+id/misson"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:text="@string/mission_add"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textAlignment="center"
        android:gravity="bottom"
        app:layout_constraintBottom_toBottomOf="@+id/coin_section"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toTopOf="@+id/view2"
        app:layout_constraintVertical_bias="0.4"
        tools:ignore="RtlCompat" />


</androidx.constraintlayout.widget.ConstraintLayout>